cmake_minimum_required(VERSION 3.12)


add_executable(sphinx2-continuous tty-continuous.c)
add_executable(sphinx2-ptt tty-ptt.c)
add_executable(sphinx2-batch batch.c)
add_executable(sphinx2-server server.c srvcore.c srvcore.h)
add_executable(sphinx2-client client.c clicore.c clicore.h)
add_executable(sphinx2-allphone allphone-test.c)
add_executable(adrec adrec.c)
add_executable(adpow adpow.c)
add_executable(cont_adseg cont_adseg.c)
add_executable(cont_fileseg cont_fileseg.c)
add_executable(raw2cep raw2cep.c)

target_link_libraries(sphinx2-continuous PRIVATE libsphinx2 libsphinx2ad libsphinx2fe -lm)
target_link_libraries(sphinx2-ptt  PRIVATE libsphinx2 libsphinx2ad libsphinx2fe -lm)
target_link_libraries(sphinx2-batch PRIVATE libsphinx2 libsphinx2ad libsphinx2fe -lm)
target_link_libraries(sphinx2-server PRIVATE libsphinx2 libsphinx2ad libsphinx2fe -lm)
target_link_libraries(sphinx2-client PRIVATE libsphinx2 libsphinx2ad libsphinx2fe -lm)
target_link_libraries(sphinx2-allphone PRIVATE libsphinx2 libsphinx2ad libsphinx2fe -lm)
target_link_libraries(adrec PRIVATE libsphinx2 libsphinx2ad libsphinx2fe -lm)
target_link_libraries(adpow PRIVATE libsphinx2 libsphinx2ad libsphinx2fe -lm)
target_link_libraries(cont_adseg PRIVATE libsphinx2 libsphinx2ad libsphinx2fe -lm)
target_link_libraries(cont_fileseg PRIVATE libsphinx2 libsphinx2ad libsphinx2fe -lm)
target_link_libraries(raw2cep PRIVATE libsphinx2 libsphinx2ad libsphinx2fe -lm)