cmake_minimum_required(VERSION 3.12)

add_library(libsphinx2
    CM_funcs.c 
	add-table.c 
	agc_emax.c 
	allphone.c 
	areadchar.c 
	areaddouble.c 
	areadfloat.c 
	areadint.c 
	areadshort.c 
	awritechar.c 
	awritedouble.c 
	awritefloat.c 
	awriteint.c 
	awriteshort.c 
	bisearch.c 
	blk_cdcn_norm.c 
	cache_lm.c 
	cdcn_init.c 
	cdcn_norm.c 
	cdcn_update.c 
	cep_rw.c 
	dict.c 
	eht_quit.c 
	err.c 
	fbs_main.c 
	f2read.c 
	f2write.c 
	get_a_word.c 
	hash.c 
	hmm_tied_r.c 
	kb_main.c 
	lab.c 
	linklist.c 
	list.c 
	live_norm.c 
	lm.c 
	lm_3g.c 
	lmclass.c 
	logmsg.c 
	longio.c 
	nxtarg.c 
	norm.c 
	pconf.c 
	peek_length.c 
	phone.c 
	prime.c 
	r_agc_noise.c 
	resfft.c 
	salloc.c 
	sc_cbook_r.c 
	sc_vq.c 
	search.c 
	searchlat.c 
	skipto.c 
	str2words.c 
	strcasecmp.c 
	time_align.c 
	unlimit.c 
	util.c 
	uttproc.c)
	
target_compile_options(libsphinx2 PRIVATE -DFAST8B=1)